--- a/config/default.json.example
+++ b/config/default.json.example
@@ -1,4 +1,5 @@
 {
     "TELEGRAM_TOKEN":"input your telegram token",
-    "OPENAI_KEY": "input your OpenAI token"
+    "OPENAI_KEY": "input your OpenAI token",
+    "ASSEMBLYAI": "input your ASSEMBLYAI token
 }
